--- a/requisitions_upload/index.html
+++ b/requisitions_upload/index.html
@@ -46,7 +46,7 @@
         popup_result_confirm_div.Set_Visible(false);
 
         get_popup_code_compare();
-        popup_code_compare_div.Set_Visible(false);
+        popup_code_compare_div.Set_Visible(true);
 
       </script>
    
