--- a/frontpage/index.html
+++ b/frontpage/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="pragma" content="no-cache">
   <meta http-equiv="expires" content="0">
   <title>智慧藥局系統</title>
-  <link rel="stylesheet" href="front_new.css?v=1.0">
+  <link rel="stylesheet" href="front_new.css?v=">
   <link rel="icon" href="../../favicon.ico" >
   <link rel="apple-touch-icon" href="apple-touch-icon.png" sizes="192x192">
   <link rel="icon" type="image/png" sizes="192x192" href="android-touch-icon.png">
