--- a/inventory/index.html
+++ b/inventory/index.html
@@ -8,7 +8,9 @@
   <meta http-equiv="expires" content="0">
   <title>盤點操作頁面</title>
   <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="vision_count.css">
   <link rel="stylesheet" href="../UI/style/navBar.css">
+  <link rel="stylesheet" href="popup_count_drugs.css">
   <link rel="icon" href="../favicon.ico" >
   <link rel="apple-touch-icon" href="apple-touch-icon.png" sizes="192x192">
   <link rel="icon" type="image/png" sizes="192x192" href="android-touch-icon.png">
@@ -34,6 +36,7 @@
           loadScript("index.js");
           loadScript("jsonFunc.js");
           loadScript("../../api/web_permissions.js");
+          loadScript("popup_count_drugs.js");
         })();
 
   </script>
