--- a/requisitions_upload_new/index.html
+++ b/requisitions_upload_new/index.html
@@ -43,7 +43,7 @@
       <script>
 
         get_popup_result_confirm();
-        popup_result_confirm_div.Set_Visible(true);
+        popup_result_confirm_div.Set_Visible(false);
 
         get_popup_code_compare();
         popup_code_compare_div.Set_Visible(false);
