--- a/inventory/index.html
+++ b/inventory/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no/>">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta http-equiv="cache-control" content="no-cache, no-store, must-revalidate">
   <meta http-equiv="pragma" content="no-cache">
   <meta http-equiv="expires" content="0">
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="index.css">
   <link rel="stylesheet" href="vision_count.css">
   <link rel="stylesheet" href="../UI/style/navBar.css">
-  <link rel="stylesheet" href="popup_count_drugs.css">
+  <link rel="stylesheet" href="popup_count_drugs.css?v=1.1">
   <link rel="icon" href="../favicon.ico" >
   <link rel="apple-touch-icon" href="apple-touch-icon.png" sizes="192x192">
   <link rel="icon" type="image/png" sizes="192x192" href="android-touch-icon.png">
@@ -66,7 +66,9 @@
           popup_med_serch_div.LoadEvent.push(popup_med_serch_Load);
           popup_med_serch_div.ClosedEvent.push(popup_med_serch_Closed);
           popup_med_serch_finishedEvent.push(popup_med_serch_finished);
-          
+
+          set_popup_container();
+          // tigger_count_drugs_container(false);
 
           const Loadingpopup = GetLoadingpopup();
           document.body.appendChild(Loadingpopup);
