--- a/inventory/index.html
+++ b/inventory/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="index.css">
   <link rel="stylesheet" href="vision_count.css">
   <link rel="stylesheet" href="../UI/style/navBar.css">
-  <link rel="stylesheet" href="popup_count_drugs.css?v=1.1">
+  <link rel="stylesheet" href="popup_count_drugs.css?v=1.4">
   <link rel="icon" href="../favicon.ico" >
   <link rel="apple-touch-icon" href="apple-touch-icon.png" sizes="192x192">
   <link rel="icon" type="image/png" sizes="192x192" href="android-touch-icon.png">
@@ -96,7 +96,7 @@
           {
             popup_creatSelect_finished();
           }
-          document.body.style.marginTop = header_div.offsetHeight + "px";
+          // document.body.style.marginTop = header_div.offsetHeight + "px";
           document.body.style.marginBottom= "30" + "px";
         })();
 
