--- a/requisitions_upload_new/index.html
+++ b/requisitions_upload_new/index.html
@@ -10,8 +10,6 @@
   <!-- <link rel="stylesheet" href="main.css"> -->
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="../UI/style/navBar.css">
-  <link rel="stylesheet" href="popup_result_confirm.css">
-  <link rel="stylesheet" href="popup_code_compare.css">
   <script src="../../Function/Basic.js?v=1.14"></script>
 
   <script>
@@ -30,8 +28,6 @@
           loadScript("../../Function/heic2any.js");
           loadScript("../../api/text_vision.js");
           loadScript("app.js");
-          loadScript("popup_result_confirm.js");
-          loadScript("popup_code_compare.js");
           loadScript("../../UI/navBar.js");
           loadScript("../../api/web_permissions.js");
         })();
@@ -39,14 +35,48 @@
   </script>
 </head>
 <body>
-  
+  <!-- <div class="main">
+    <div class="draw_container">
+      <video id="steam_container" src="" muted autoplay></video>
+      <canvas class="draw_canvas"></canvas>
+      <div class="draw_result"></div>
+    </div>
+    <div class="tigger_container">
+      <div class="trigger"></div>
+    </div>
+    <div class="result_container">
+      <div class="srcoll_bar"></div>
+      <div class="med_info_container">
+        <div class="med_info">
+          <label for="code">藥碼</label>
+          <input type="text" maxlength="20" id="code">
+          <label for="name">藥名(英)</label>
+          <input type="text" maxlength="60" id="name">
+          <label for="cht_name">藥名(中)</label>
+          <input type="text" maxlength="40" id="cht_name">
+        </div>
+        <div class="re_name btn">資料庫輸入</div>
+      </div>
+ 
+      <div class="list_info_container">
+        <label for="qty">數量</label>
+        <input type="text" maxlength="40" id="qty">
+        <label for="deadtime">效期</label>
+        <input type="text" maxlength="40" id="deadtime">
+        <label for="batch_num">批號</label>
+        <input type="text" maxlength="40" id="batch_num">
+        <label for="order_num">單號</label>
+        <input type="text" maxlength="40" id="order_num">
+      </div>
+      <div class="list_check_container">
+        <div class="list_check btn">送出</div>
+        <div class="list_retry btn">重新辨識</div>
+      </div>
+    </div>
+  </div> -->
+
       <script>
 
-        get_popup_result_confirm();
-        popup_result_confirm_div.Set_Visible(false);
-
-        get_popup_code_compare();
-        popup_code_compare_div.Set_Visible(false);
 
       </script>
    
