--- a/requisitions_upload_new/index.html
+++ b/requisitions_upload_new/index.html
@@ -8,8 +8,9 @@
   <meta http-equiv="expires" content="0">
   <title>單據辨識</title>
   <!-- <link rel="stylesheet" href="main.css"> -->
-  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="../UI/style/navBar.css">
+  <link rel="stylesheet" href="style.css?v=1.2">
+  <link rel="stylesheet" href="popup_code_compare.css?v=1.3">
   <script src="../../Function/Basic.js?v=1.14"></script>
 
   <script>
@@ -27,6 +28,7 @@
           loadScript("../../Function/WebApiFunc.js");
           loadScript("../../Function/heic2any.js");
           loadScript("../../api/text_vision.js");
+          loadScript("popup_code_compare.js");
           loadScript("app.js");
           loadScript("../../UI/navBar.js");
           loadScript("../../api/web_permissions.js");
@@ -76,7 +78,8 @@
   </div> -->
 
       <script>
-
+        get_popup_code_compare();
+        popup_code_compare_div.Set_Visible(false);
 
       </script>
    
