住院調劑畫面調整

--- a/requisitions_upload/index.html
+++ b/requisitions_upload/index.html
@@ -67,7 +67,7 @@
   <script>
 
   (async function() {
-    trigger_popup_input_po_num(true);
+    trigger_popup_input_po_num(false);
     await popup_login_init();
     
     popup_login_finishedEvent.push(popup_login_finished);
