盤點數粒輸入數量加入原先計算

--- a/requisitions_upload/index.html
+++ b/requisitions_upload/index.html
@@ -8,7 +8,7 @@
   <meta http-equiv="expires" content="0">
   <title>單據辨識批次上傳</title>
   <!-- <link rel="stylesheet" href="main.css"> -->
-  <link rel="stylesheet" href="style.css?v=1.0">
+  <link rel="stylesheet" href="style.css?v=1.2">
   <link rel="stylesheet" href="popup_input_po_num.css">
   <link rel="stylesheet" href="../UI/style/navBar.css">
   <script src="../../Function/Basic.js?v=1.14"></script>
@@ -28,6 +28,7 @@
           loadScript("../../Function/WebApiFunc.js");
           loadScript("../../Function/heic2any.js");
           loadScript("../../api/po_analyze.js");
+          loadScript("data_storage.js");
           loadScript("app.js");
           loadScript("popup_login.js");
           loadScript("popup_input_po_num.js");
