--- a/inventory/index.html
+++ b/inventory/index.html
@@ -45,6 +45,8 @@
       <script>
         (async function() 
         {
+          let body = document.querySelector('body');
+
           // document.body.style.position = 'absolute';
           document.body.style.overflowY = "scroll";
           document.body.style.overflowX = "hidden";
@@ -156,7 +158,8 @@
      }
      
   }
-  window.addEventListener('keydown', get_barcode_input_event);
+
+  // window.addEventListener('keydown', get_barcode_input_event);
   function get_barcode_input_event (event) {
       console.log("isDesktop",isDesktop);
       if(isDesktop)
