--- a/phar_system/medicine_cart/index.html
+++ b/phar_system/medicine_cart/index.html
@@ -23,6 +23,7 @@
   <link rel="stylesheet" href="popup_physician_notes.css">
   <link rel="stylesheet" href="popup_insurance_regulations.css">
   <link rel="stylesheet" href="popup_bed_change.css">
+  <link rel="stylesheet" href="popup_bed_change_search.css">
   <link rel="stylesheet" href="popup_med_change_list.css">
   <script src="../Function/Basic.js?v=1.14"></script>
 
@@ -63,6 +64,7 @@
           loadScript("popup_insurance_regulations.js");
           loadScript("popup_med_change_list.js");
           loadScript("popup_bed_change.js");
+          loadScript("popup_bed_change_search.js");
         })();
 
   </script>
@@ -104,6 +106,9 @@
 
     get_popup_bed_change();
     popup_bed_change_div.Set_Visible(false);
+
+    get_popup_bed_change_search();
+    popup_bed_change_search_div.Set_Visible(false);
   </script>
 
   <div class="under-line">
