Co-authored-by: LeonLu <LeonLu3303@users.noreply.github.com>

--- a/phar_system/inspection_manager/index.html
+++ b/phar_system/inspection_manager/index.html
@@ -21,7 +21,7 @@
     <script src="../UI/navBar.js"></script>
     <script src="frontpage.js"></script>
     <script src="jsonFunc.js"></script>
-    <script src="frontpage_loadingdata.js"></script>
+    <script src="frontpage_loadingdata.js?v=1.2"></script>
     <script src="forntpage_popup_serch.js"></script>
     <script src="frontpage_popup_add.js"></script>
     <script src="frontpage_popup_upload.js"></script>
@@ -32,7 +32,6 @@
 </head>
 <body>
     <script>
-     
      document.body.style.position = 'absolute';
      const header_div = get_header();
      document.body.appendChild(header_div);
