--- a/phar_system/inventory/index.html
+++ b/phar_system/inventory/index.html
@@ -19,14 +19,14 @@
     (async function() 
         {
           loadScript("../api/map.js");
-          loadScript("../../ApiURL.js");
-          loadScript("../../ChatHub.js");
+          loadScript("../../../ApiURL.js");
+          loadScript("../../../ChatHub.js");
           loadScript("../svg/mySVG.js");
           loadScript("../UI/map.js");
           loadScript("../popup/map.js");    
           loadScript("../dist/JsBarcode.all.js");
-          loadScript("../../session_check.js");
-          loadScript("../../session.js");
+          loadScript("../../../session_check.js");
+          loadScript("../../../session.js");
           loadScript("main_loadingdata.js");
           loadScript("main_popup_serch.js");
           loadScript("popup_content_input.js");
