--- a/phar_system/inventory_manager/index.html
+++ b/phar_system/inventory_manager/index.html
@@ -4,33 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>盤點單管理</title>
-    <link rel="stylesheet" href="../../inventory/manager/list.css">
-    <link rel="stylesheet" href="../../inventory/manager/merge.css">
-    <link rel="stylesheet" href="../../UI/style/navBar.css">
-    <script src="../../Function/Basic.js?v=1.0"></script>
+    <link rel="stylesheet" href="list.css">
+    <link rel="stylesheet" href="merge.css">
+    <link rel="stylesheet" href="../UI/style/navBar.css">
+    <script src="../Function/Basic.js?v=1.0"></script>
     <script>
       (async function() 
           {
-            loadScript("../../api/map.js");
+            loadScript("../api/map.js");
             loadScript("../../../ApiURL.js");
             loadScript("../../../ChatHub.js");
-            loadScript("../../svg/mySVG.js");
-            loadScript("../../UI/map.js");
-            loadScript("../../popup/map.js");    
-            loadScript("../../dist/JsBarcode.all.js");
+            loadScript("../svg/mySVG.js");
+            loadScript("../UI/map.js");
+            loadScript("../popup/map.js");    
+            loadScript("../dist/JsBarcode.all.js");
             loadScript("../../../session_check.js");
             loadScript("../../../session.js");
-            loadScript("../../inventory/manager/list.js");
-            loadScript("../../inventory/manager/list_loadingdata.js");
-            loadScript("../../inventory/manager/list_popup_add.js");
-            loadScript("../../inventory/manager/list_popup_serch.js");
-            loadScript("../../inventory/manager/list_popup_upload.js");
-            loadScript("../../inventory/manager/list_popup_add_default_op.js");
-            loadScript("../../inventory/manager/list_popup_setting.js");
-            loadScript("../../inventory/manager/list_popup_set_add_med.js");
-            loadScript("../../UI/navBar.js");
-            loadScript("../../inventory/manager/merge.js");
-            loadScript("../../api/web_permissions.js");
+            loadScript("./list.js");
+            loadScript("./list_loadingdata.js");
+            loadScript("./list_popup_add.js");
+            loadScript("./list_popup_serch.js");
+            loadScript("./list_popup_upload.js");
+            loadScript("./list_popup_add_default_op.js");
+            loadScript("./list_popup_setting.js");
+            loadScript("./list_popup_set_add_med.js");
+            loadScript("../UI/navBar.js");
+            loadScript("./merge.js");
+            loadScript("../api/web_permissions.js");
           })();
   
     </script>
