--- a/phar_system/requisitions_upload/index.html
+++ b/phar_system/requisitions_upload/index.html
@@ -10,6 +10,7 @@
   <!-- <link rel="stylesheet" href="main.css"> -->
   <link rel="stylesheet" href="style.css?v=1.4">
   <link rel="stylesheet" href="popup_input_po_num.css">
+  <link rel="stylesheet" href="popup_confrim_IC_SN.css">
   <link rel="stylesheet" href="../UI/style/navBar.css">
   <link rel="stylesheet" href="process_bar.css">
   <link rel="stylesheet" href="popup_retake.css">
@@ -33,6 +34,7 @@
           loadScript("app.js");
           loadScript("popup_login.js");
           loadScript("popup_input_po_num.js");
+          loadScript("popup_confrim_IC_SN.js");
           loadScript("../UI/navBar.js");
           loadScript("../api/web_permissions.js");
           loadScript("popup_retake.js");
