--- a/phar_system/requisitions_upload/index.html
+++ b/phar_system/requisitions_upload/index.html
@@ -101,6 +101,9 @@
 
     get_popup_retake();
     popup_retake_div.Set_Visible(false);
+
+    get_popup_confrim_IC_SN();
+    popup_confrim_IC_SN.Set_Visible(true);
   // else if(IsLogged && !IsCreatSelected)
   // {
   //   await popup_creatSelect_div.Show();
