--- a/phar_system/medicine_cart/index.html
+++ b/phar_system/medicine_cart/index.html
@@ -10,11 +10,11 @@
   <!-- <link rel="stylesheet" href="main.css"> -->
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="../UI/style/navBar.css">
-  <link rel="stylesheet" href="allocate.css">
+  <link rel="stylesheet" href="allocate.css?v=1.3">
   <link rel="stylesheet" href="review.css">
   <link rel="stylesheet" href="popup_dc_new.css">
   <link rel="stylesheet" href="popup_bed_list.css?v=1.2">
-  <link rel="stylesheet" href="popup_med_list.css?v=1.5">
+  <link rel="stylesheet" href="popup_med_list.css?v=1.8">
   <link rel="stylesheet" href="popup_med_list_search.css">
   <link rel="stylesheet" href="popup_light_table_select.css">
   <link rel="stylesheet" href="popup_med_pic.css">
