Co-authored-by: LeonLu <LeonLu3303@users.noreply.github.com>

--- a/phar_system/requisitions_upload/index.html
+++ b/phar_system/requisitions_upload/index.html
@@ -103,7 +103,7 @@
     popup_retake_div.Set_Visible(false);
 
     get_popup_confrim_IC_SN();
-    popup_confrim_IC_SN.Set_Visible(true);
+    popup_confrim_IC_SN.Set_Visible(false);
   // else if(IsLogged && !IsCreatSelected)
   // {
   //   await popup_creatSelect_div.Show();
