住院調劑畫面調整，串接資料欄未變更

--- a/phar_system/barcodemanagement/index.html
+++ b/phar_system/barcodemanagement/index.html
@@ -10,22 +10,22 @@
   <script src="../../Function/Basic.js?v=1.0"></script>
   <script>
     (async function() {
-      loadScript("../../api/map.js");
+      loadScript("../api/map.js");
       loadScript("../../ApiURL.js");
       loadScript("../../ChatHub.js");
-      loadScript("../../svg/mySVG.js");
-      loadScript("../../UI/map.js");
-      loadScript("../../popup/map.js");    
-      loadScript("../../dist/JsBarcode.all.js");
+      loadScript("../svg/mySVG.js");
+      loadScript("../UI/map.js");
+      loadScript("../popup/map.js");    
+      loadScript("../dist/JsBarcode.all.js");
       loadScript("../../session_check.js");
       loadScript("../../session.js");
       loadScript("../UI/navBar.js");
-      loadScript("../../barcodemanagement/main.js");
-      loadScript("../../barcodemanagement/main_loadingdata.js");
-      loadScript("../../barcodemanagement/main_popup_input.js");
-      loadScript("../../barcodemanagement/main_popup_serch.js");
-      loadScript("../../barcodemanagement/jsonFunc.js");
-      loadScript("../../api/web_permissions.js");
+      loadScript("main.js");
+      loadScript("main_loadingdata.js");
+      loadScript("main_popup_input.js");
+      loadScript("main_popup_serch.js");
+      loadScript("jsonFunc.js");
+      loadScript("../api/web_permissions.js");
     })();
 
   </script>
