住院調劑，條碼掃描假資料 交易紀錄欄位新增 Function.js的barcode為條

--- a/phar_system/barcodemanagement/index.html
+++ b/phar_system/barcodemanagement/index.html
@@ -82,7 +82,7 @@
     // 監聽頁面的keydown事件
   window.addEventListener('keydown', function(event) 
   {
-    //  barcode_keydown(event);
+     barcode_keydown(event);
   });
 
   async function barcode_keydown(event)
