--- a/phar_system/consumption/index.html
+++ b/phar_system/consumption/index.html
@@ -8,7 +8,7 @@
   <meta http-equiv="expires" content="0">
   <title>西藥藥品交易紀錄</title>
   <!-- <link rel="stylesheet" href="main.css"> -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css?v=1.14">
   <link rel="stylesheet" href="../UI/style/navBar.css">
   <link rel="stylesheet" href="popup_pharmacy_select_style.css">
   <link rel="stylesheet" href="popup_search.css">
