--- a/phar_system/controlleddrug/index.html
+++ b/phar_system/controlleddrug/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="../UI/style/navBar.css">
   <link rel="stylesheet" href="popup_pharmacy_select_style.css">
-  <link rel="stylesheet" href="popup_med_balance_form_style.css">
+  <link rel="stylesheet" href="popup_med_balance_form_style.css?v=1.1">
   <link rel="stylesheet" href="popup_muilt_med_select.css">
   <script src="../Function/Basic.js?v=1.0"></script>
   <!-- <script src="../../ApiURL.js"></script>
