--- a/phar_system/requisitions_upload/index.html
+++ b/phar_system/requisitions_upload/index.html
@@ -19,7 +19,7 @@
   <script>
     (async function() 
         {
-          loadScript("../../api/map.js");
+          loadScript("../api/map.js");
           loadScript("../../ApiURL.js");
           loadScript("../../session_check.js");
           loadScript("../../session.js");
