--- a/phar_system/inventory/index.html
+++ b/phar_system/inventory/index.html
@@ -159,7 +159,7 @@
      
   }
 
-  // window.addEventListener('keydown', get_barcode_input_event);
+  window.addEventListener('keydown', get_barcode_input_event);
   function get_barcode_input_event (event) {
       console.log("isDesktop",isDesktop);
       if(isDesktop)
