住院調劑至頂功能

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 
     <script>
         (async function(){
-        loadScript("../api/map.js");
-        loadScript("../ApiURL.js");
-        loadScript("../ChatHub.js");
-        loadScript("../svg/mySVG.js");
-        loadScript("../UI/map.js");
-        loadScript("../popup/map.js");
-        loadScript("../dist/JsBarcode.all.js");
-        loadScript("../session_check.js");
-        loadScript("../session.js");
-        loadScript("../login.js");
+        loadScript("./phar_system/api/map.js");
+        loadScript("./ApiURL.js");
+        loadScript("./ChatHub.js");
+        loadScript("./svg/mySVG.js");
+        loadScript("./UI/map.js");
+        loadScript("./popup/map.js");
+        loadScript("./dist/JsBarcode.all.js");
+        loadScript("./session_check.js");
+        loadScript("./session.js");
+        loadScript("./login.js");
         })();
     </script>
 </head>
