--- a/phar_system/requisitions_upload/index.html
+++ b/phar_system/requisitions_upload/index.html
@@ -9,12 +9,12 @@
   <title>單據辨識批次上傳</title>
   <!-- <link rel="stylesheet" href="main.css"> -->
   <link rel="stylesheet" href="style.css?v=1.4">
-  <link rel="stylesheet" href="popup_input_po_num.css">
+  <link rel="stylesheet" href="popup_input_po_num.css?v=1.5">
   <link rel="stylesheet" href="popup_confrim_IC_SN.css">
   <link rel="stylesheet" href="../UI/style/navBar.css">
   <link rel="stylesheet" href="process_bar.css">
   <link rel="stylesheet" href="popup_retake.css">
-  <link rel="stylesheet" href="popup_update_info.css?v=1.4">
+  <link rel="stylesheet" href="popup_update_info.css?v=1.5">
   <script src="../Function/Basic.js?v=1.14"></script>
   <script>
     (async function() 
@@ -61,7 +61,13 @@
         <img class="ppipn_header_close" src="../image/close.png" alt="" onclick="trigger_popup_input_po_num(false)">
       </div>
       <div class="ppipn_main_container">
-        <img class="ppipn_main_img" src="" alt="">
+        <div class="ppipn_img_container">
+          <img class="ppipn_main_img" src="" alt="">
+          <div class="ppipn_img_zoom_container">
+            <div class="ppipn_img_zoom_in">大<img src="" alt="zoom in"></div>
+            <div class="ppipn_img_zoom_out">小<img src="" alt="zoom out"></div>
+          </div>
+        </div>
         <div class="ppipn_main_content">
           <input class="ppipn_main_input input_style" type="text" maxlength="30" placeholder="請輸入單號">
         </div>
