單據辨識放大功能

--- a/phar_system/requisitions_upload/index.html
+++ b/phar_system/requisitions_upload/index.html
@@ -9,12 +9,12 @@
   <title>單據辨識批次上傳</title>
   <!-- <link rel="stylesheet" href="main.css"> -->
   <link rel="stylesheet" href="style.css?v=1.4">
-  <link rel="stylesheet" href="popup_input_po_num.css?v=1.5">
+  <link rel="stylesheet" href="popup_input_po_num.css?v=1.6">
   <link rel="stylesheet" href="popup_confrim_IC_SN.css">
   <link rel="stylesheet" href="../UI/style/navBar.css">
   <link rel="stylesheet" href="process_bar.css">
   <link rel="stylesheet" href="popup_retake.css">
-  <link rel="stylesheet" href="popup_update_info.css?v=1.5">
+  <link rel="stylesheet" href="popup_update_info.css?v=1.7">
   <script src="../Function/Basic.js?v=1.14"></script>
   <script>
     (async function() 
@@ -64,8 +64,8 @@
         <div class="ppipn_img_container">
           <img class="ppipn_main_img" src="" alt="">
           <div class="ppipn_img_zoom_container">
-            <div class="ppipn_img_zoom_in">大<img src="" alt="zoom in"></div>
-            <div class="ppipn_img_zoom_out">小<img src="" alt="zoom out"></div>
+            <div class="ppipn_img_zoom_in"><img class="ppipn_img_zoom_in_pic" src="../image/plus.png" alt="zoom in"></div>
+            <div class="ppipn_img_zoom_out"><img class="ppipn_img_zoom_out_pic" src="../image/minimize-sign.png" alt="zoom out"></div>
           </div>
         </div>
         <div class="ppipn_main_content">
