Co-authored-by: LeonLu3303 <LeonLu3303@users.noreply.github.com>

--- a/phar_system/med_balance/index.html
+++ b/phar_system/med_balance/index.html
@@ -19,20 +19,20 @@
         {
           loadScript("../../../ApiURL.js");
           loadScript("../../../ChatHub.js");
-          loadScript("../../svg/mySVG.js");
-          loadScript("../../UI/map.js");
-          loadScript("../../popup/map.js");    
-          loadScript("../../dist/JsBarcode.all.js");
+          loadScript("../svg/mySVG.js");
+          loadScript("../UI/map.js");
+          loadScript("../popup/map.js");    
+          loadScript("../dist/JsBarcode.all.js");
           loadScript("../../../session_check.js");
           loadScript("../../../session.js");
-          loadScript("../../api/transaction.js");
-          loadScript("../../Function/WebApiFunc.js");
+          loadScript("../api/transaction.js");
+          loadScript("../Function/WebApiFunc.js");
           loadScript("app.js");
           loadScript("popup_pharmacy_select.js");
           // loadScript("popup_search.js");
           loadScript("jsonFunc.js");
-          loadScript("../../UI/navBar.js");
-          loadScript("../../api/web_permissions.js");
+          loadScript("../UI/navBar.js");
+          loadScript("../api/web_permissions.js");
         })();
 
   </script>
@@ -103,6 +103,5 @@ function parseBarcode(scannedCode)
 }
 
 </script>
-  
 </body>
 </html>
