--- a/phar_system/staff_management/index.html
+++ b/phar_system/staff_management/index.html
@@ -8,7 +8,7 @@
   <meta http-equiv="expires" content="0">
   <title>次世代藥局管理系統</title>
   <!-- <link rel="stylesheet" href="main.css"> -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css?v=1.16">
   <link rel="stylesheet" href="../UI/style/navBar.css">
   <link rel="stylesheet" href="popup_add_modify_staff.css">
   <link rel="stylesheet" href="popup_staff_level.css">
