Co-authored-by: LeonLu3303 <LeonLu3303@users.noreply.github.com>

--- a/phar_system/medicine_cart/index.html
+++ b/phar_system/medicine_cart/index.html
@@ -24,7 +24,7 @@
   <link rel="stylesheet" href="popup_insurance_regulations.css">
   <link rel="stylesheet" href="popup_bed_change.css">
   <link rel="stylesheet" href="popup_bed_change_search.css">
-  <link rel="stylesheet" href="popup_med_change_list.css">
+  <link rel="stylesheet" href="popup_med_change_list.css?v=1.0">
   <script src="../Function/Basic.js?v=1.14"></script>
 
   <script>
