--- a/phar_system/inspection_manager/index.html
+++ b/phar_system/inspection_manager/index.html
@@ -17,11 +17,10 @@
     <script src="../UI/map.js"></script>
     <script src="../../session_check.js"></script>
     <script src="../../session.js"></script>
-
     <script src="../UI/navBar.js"></script>
     <script src="frontpage.js"></script>
-    <script src="jsonFunc.js"></script>
-    <script src="frontpage_loadingdata.js?v=1.2"></script>
+    <script src="jsonFunc.js?v=1.0"></script>
+    <script src="frontpage_loadingdata.js?v=1.4"></script>
     <script src="forntpage_popup_serch.js"></script>
     <script src="frontpage_popup_add.js"></script>
     <script src="frontpage_popup_upload.js"></script>
